--- a/web/views/head.ejs
+++ b/web/views/head.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-      <%= typeof(pageName) == "undefined" ? siteName : pageName + " " + siteName
+      <%= typeof(pageName) == "undefined" ? siteName : pageName + " | " + siteName
       %>
     </title>
     <link rel="stylesheet" href="/pico.css">
