--- a/web/views/login.ejs
+++ b/web/views/login.ejs
@@ -7,7 +7,7 @@
   </label>
   <label>
     Password
-    <input type="text" name="password" value="<%= password %>">
+    <input type="password" name="password" value="<%= password %>">
   </label>
   <% if (typeof(msg) != "undefined") { %>
   <mark class="msg"><%= msg %></mark>
