--- a/web/views/register.ejs
+++ b/web/views/register.ejs
@@ -7,7 +7,7 @@
   </label>
   <label>
     Password
-    <input type="text" name="password" value="<%= password %>">
+    <input type="password" name="password" value="<%= password %>">
   </label>
   <% if (typeof(msg_fail) != "undefined") { %>
   <mark class="msg msg-fail"><%= msg_fail %></mark>
