--- a/web/views/head.ejs
+++ b/web/views/head.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/pico.css">
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-      <%= typeof(pageName) == "undefined" ? siteName : pageName + " | " + siteName
-      %>
+      <%= typeof(pageName) == "undefined" ? siteName : pageName + " | " +
+      siteName %>
     </title>
-    <link rel="stylesheet" href="/pico.css">
-    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <%- include("header") -%>
