--- a/web/views/post.ejs
+++ b/web/views/post.ejs
@@ -20,28 +20,31 @@
       </svg>
       <%= post.votes %>
     </button>
-    <button>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-      >
-        <g
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
+    <form action="/deletepost/<%= post.id %>" method="post">
+      <button type="submit">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          aria-label="trash"
         >
-          <path
-            d="M12 20h5c0.5 0 1 -0.5 1 -1v-14M12 20h-5c-0.5 0 -1 -0.5 -1 -1v-14"
-          />
-          <path d="M4 5h16" />
-          <path d="M10 4h4M10 9v7M14 9v7" />
-        </g>
-      </svg>
-    </button>
+          <g
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+          >
+            <path
+              d="M12 20h5c0.5 0 1 -0.5 1 -1v-14M12 20h-5c-0.5 0 -1 -0.5 -1 -1v-14"
+            />
+            <path d="M4 5h16" />
+            <path d="M10 4h4M10 9v7M14 9v7" />
+          </g>
+        </svg>
+      </button>
+    </form>
     <button class="contrast"><%= post.category %></button>
     <span><%= post.createdAt.toISOString() %></span>
   </div>
