--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -21,6 +21,10 @@
   </button>
   <button class="contrast"><%= post.category %></button>
   <span><%= post.createdAt.toISOString() %></span>
+  <span>
+    by
+    <a href="/users/<%= post.User.id %>"><%= post.User.name %></a>
+  </span>
   <hr>
   <h2><a href="/posts/<%= post.id %>"><%= post.title %></a></h2>
   <% if (post.link) { %>
