--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -8,7 +8,7 @@
   %>
   <p><%= paragraph %></p>
   <% }} else { %>
-  <p>"(no about text)"</p>
+  <p>(no about text)</p>
   <% } %>
 </article>
 <%- include("foot") -%>
