web/web: add comment replies

--- a/web/views/comment.ejs
+++ b/web/views/comment.ejs
@@ -1,4 +1,4 @@
-<article style="margin-left: <%= level * 50 %>px">
+<article style="margin-left: <%= level * 50 %>px" id=c<%= comment.id %>>
   <button>
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -18,6 +18,7 @@
     </svg>
     <%= comment.votes %>
   </button>
+  <a href="/comments/<%= comment.id %>"><button>Reply</button></a>
   <span>
     by
     <a href="/users/<%= comment.UserId %>"><%= comment.User.name %></a>
