web/web: add delete comment buttons

--- a/web/public/style.css
+++ b/web/public/style.css
@@ -10,7 +10,8 @@ nav li {
   margin-inline: 5px;
 }
 h1 > a,
-h2 > a {
+h2 > a,
+a:has(button) {
   color: currentColor;
   text-decoration: none;
 }
