--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -1,30 +1,34 @@
 <% pageName = "Frontpage" %> <%- include("head") -%> <% for (post of posts) { %>
 <article>
-  <button class="">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="1em"
-      height="1em"
-      viewBox="0 0 24 24"
-      aria-label="up arrow"
-    >
-      <path
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M12 8l-7 7M12 8l7 7"
-      />
-    </svg>
-    <%= post.votes %>
-  </button>
-  <button class="contrast"><%= post.category %></button>
-  <span><%= post.createdAt.toISOString() %></span>
-  <span>
-    by
-    <a href="/users/<%= post.User.id %>"><%= post.User.name %></a>
-  </span>
+  <div>
+    <form action="/postVote/<%= post.id %>" method="post">
+      <button>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="1em"
+          height="1em"
+          viewBox="0 0 24 24"
+          aria-label="upvote arrow"
+        >
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 8l-7 7M12 8l7 7"
+          />
+        </svg>
+        <%= post.votes %>
+      </button>
+    </form>
+    <button class="contrast"><%= post.category %></button>
+    <span><%= post.createdAt.toISOString() %></span>
+    <span>
+      by
+      <a href="/users/<%= post.User.id %>"><%= post.User.name %></a>
+    </span>
+  </div>
   <hr>
   <h2><a href="/posts/<%= post.id %>"><%= post.title %></a></h2>
   <% if (post.link) { %>
