--- a/web/views/comment.ejs
+++ b/web/views/comment.ejs
@@ -1,24 +1,26 @@
 <article style="margin-left: <%= level * 50 %>px" id=c<%= comment.id %>>
   <div>
-    <button>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="1em"
-        height="1em"
-        viewBox="0 0 24 24"
-        aria-label="upvote arrow"
-      >
-        <path
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M12 8l-7 7M12 8l7 7"
-        />
-      </svg>
-      <%= comment.votes %>
-    </button>
+    <form action="/commentVote/<%= comment.id %>" method="post">
+      <button>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="1em"
+          height="1em"
+          viewBox="0 0 24 24"
+          aria-label="upvote arrow"
+        >
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 8l-7 7M12 8l7 7"
+          />
+        </svg>
+        <%= comment.votes %>
+      </button>
+    </form>
     <% if (user && (user.isAdmin || user.id == comment.UserId)) { %>
     <form action="/deletecomment/<%= comment.id %>" method="post">
       <button type="submit">
@@ -45,6 +47,8 @@
         </svg>
       </button>
     </form>
+    <% } %>
+    <% if (user) { %>
     <a href="/comments/<%= comment.id %>"><button>Reply</button></a>
     <% } %>
     <span>
