--- a/web/views/post.ejs
+++ b/web/views/post.ejs
@@ -1,25 +1,27 @@
 <% pageName = post.title %> <%- include("head") -%>
 <article>
   <div>
-    <button>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="1em"
-        height="1em"
-        viewBox="0 0 24 24"
-        aria-label="upvote arrow"
-      >
-        <path
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M12 8l-7 7M12 8l7 7"
-        />
-      </svg>
-      <%= post.votes %>
-    </button>
+    <form action="/postVote/<%= post.id %>" method="post">
+      <button>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="1em"
+          height="1em"
+          viewBox="0 0 24 24"
+          aria-label="upvote arrow"
+        >
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 8l-7 7M12 8l7 7"
+          />
+        </svg>
+        <%= post.votes %>
+      </button>
+    </form>
     <% if (user && (user.isAdmin || user.id == post.UserId)) { %>
     <form action="/deletepost/<%= post.id %>" method="post">
       <button type="submit">
@@ -63,7 +65,7 @@
   <p><%= paragraph %></p>
   <% }} %>
 </article>
-<% if (user && (user.isAdmin || user.id == post.UserId)) { %>
+<% if (user) { %>
 <article>
   <form method="post">
     <label>
