--- a/web/views/commentPage.ejs
+++ b/web/views/commentPage.ejs
@@ -1,7 +1,7 @@
 <%- include("head") -%>
 <article>
   <div>
-    <form action="/commentVote/<%= comment.id %>" method="post">
+    <form action="/commentVote/<%= comment.id %>?redirect=/comments/<%= comment.id %>" method="post">
       <button>
         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" aria-label="upvote arrow">
           <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
