web: remove duplicated UserId

--- a/web/views/post.ejs
+++ b/web/views/post.ejs
@@ -27,7 +27,7 @@
     <span><%= post.createdAt.toISOString() %></span>
     <span>
       by
-      <a href="/users/<%= post.User.id %>"><%= post.User.name %></a>
+      <a href="/users/<%= post.UserId %>"><%= post.User.name %></a>
     </span>
   </div>
   <hr>
