--- a/web/views/comment.ejs
+++ b/web/views/comment.ejs
@@ -1,7 +1,7 @@
 <article style="margin-left: <%= level * 50 %>px" id=c<%= comment.id %>>
   <div>
     <form action="/commentVote/<%= comment.id %>" method="post">
-      <button>
+      <button class="<%= comment.voted ? 'outline' : '' %>">
         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" aria-label="upvote arrow">
           <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M12 8l-7 7M12 8l7 7" />
