--- a/web/views/post.ejs
+++ b/web/views/post.ejs
@@ -2,7 +2,7 @@
 <article>
   <div>
     <form action="/postVote/<%= post.id %>" method="post">
-      <button>
+      <button class="<%= post.voted ? 'outline' : '' %>">
         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" aria-label="upvote arrow">
           <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M12 8l-7 7M12 8l7 7" />
