--- a/app/SocialNewsApp/Views/PostControl.axaml
+++ b/app/SocialNewsApp/Views/PostControl.axaml
@@ -14,11 +14,16 @@
 			<RowDefinition Height="auto"/>
 			<RowDefinition/>
 		</Grid.RowDefinitions>
-		<StackPanel Orientation="Horizontal">
-			<Button Content="{Binding Votes, StringFormat=^ {0}}"/>
-			<TextBlock Text="{Binding Category}"/>
-			<TextBlock Text="{Binding CreatedAt}"/>
-			<TextBlock Text="{Binding User.Name, StringFormat=by {0}}"/>
+		<StackPanel Orientation="Horizontal" Spacing="5">
+			<Button Content="{Binding Votes, StringFormat=^ {0}}" VerticalAlignment="Center"/>
+			<TextBlock Text="{Binding Category}" VerticalAlignment="Center"/>
+			<TextBlock Text="{Binding CreatedAt}" VerticalAlignment="Center"/>
+			<TextBlock Text="{Binding User.Name, StringFormat=by {0}}" VerticalAlignment="Center"/>
+		</StackPanel>
+		<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5">
+			<TextBlock Text="{Binding Title}" FontSize="20" VerticalAlignment="Center"/>
+			<TextBlock Text="{Binding LinkType}" VerticalAlignment="Center"/>
+			<HyperlinkButton Content="{Binding Link}" NavigateUri="{Binding Link}" VerticalAlignment="Center"/>
 		</StackPanel>
 	</Grid>
 </UserControl>
