--- a/app/SocialNewsApp/Views/LogInOrRegisterView.axaml
+++ b/app/SocialNewsApp/Views/LogInOrRegisterView.axaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SocialNewsApp.LogInOrRegisterView"
-			 xmlns:m="clr-namespace:SocialNewsApp.Models;assembly=SocialNewsApp"
-			 x:DataType="m:NamePassword">
+			 xmlns:vm="clr-namespace:SocialNewsApp.ViewModels;assembly=SocialNewsApp"
+			 x:DataType="vm:LogInOrRegisterViewModel">
 	<Grid Margin="10" RowSpacing="5">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="auto"/>
@@ -21,7 +21,7 @@
 		<Label HorizontalAlignment="Right">Name</Label>
 		<Label Grid.Row="1" HorizontalAlignment="Right">Password</Label>
 		<TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Password}" PasswordChar="*"/>
-		<Button Grid.Row="2">Cancel</Button>
+		<Button Grid.Row="2" Command="{Binding CancelCommand}">Cancel</Button>
 		<StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
 			<Button>Log in</Button>
 			<Button>Register</Button>
