--- a/app/SocialNewsApp/Views/MainView.axaml
+++ b/app/SocialNewsApp/Views/MainView.axaml
@@ -18,7 +18,7 @@
 		</Grid.RowDefinitions>
 		<Menu>
 			<MenuItem Command="{Binding RefreshPostsCommand}" Header="_Refresh"/>
-			<MenuItem Command="" Header="_Log in or register" IsVisible="{Binding !IsLoggedIn}"/>
+			<MenuItem Command="{Binding LogInOrRegisterCommand}" Header="_Log in or register" IsVisible="{Binding !IsLoggedIn}"/>
 			<MenuItem Command="" Header="_Log out" IsVisible="{Binding IsLoggedIn}"/>
 		</Menu>
 		<ItemsControl ItemsSource="{Binding Posts}" Grid.Row="1" Margin="10">
