--- a/app/SocialNewsApp/Views/MainWindow.axaml
+++ b/app/SocialNewsApp/Views/MainWindow.axaml
@@ -7,6 +7,4 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SocialNewsApp.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="SocialNewsApp">
-        <views:MainView />
-</Window>
+        Title="Social News"/>
