--- a/app/SocialNewsApp/Views/PostControl.axaml
+++ b/app/SocialNewsApp/Views/PostControl.axaml
@@ -15,7 +15,8 @@
 			<RowDefinition/>
 		</Grid.RowDefinitions>
 		<StackPanel Orientation="Horizontal" Spacing="5">
-			<Button Content="{Binding Votes, StringFormat=^ {0}}" VerticalAlignment="Center"/>
+			<Button Content="{Binding Votes, StringFormat=⬆ {0}}" VerticalAlignment="Center" IsVisible="{Binding Voted}" Opacity=".5"/>
+			<Button Content="{Binding Votes, StringFormat=⬆ {0}}" VerticalAlignment="Center" IsVisible="{Binding !Voted}"/>
 			<SelectableTextBlock Text="{Binding Category}" VerticalAlignment="Center" />
 			<SelectableTextBlock Text="{Binding CreatedAt}" VerticalAlignment="Center"/>
 			<SelectableTextBlock Text="{Binding User.Name, StringFormat=by {0}}" VerticalAlignment="Center"/>
