--- a/app/SocialNewsApp/App.axaml
+++ b/app/SocialNewsApp/App.axaml
@@ -3,13 +3,17 @@
              xmlns:local="using:SocialNewsApp"
              x:Class="SocialNewsApp.App"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+	<!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
-    <Application.DataTemplates>
-        <local:ViewLocator/>
-    </Application.DataTemplates>
+	<Application.DataTemplates>
+		<local:ViewLocator/>
+	</Application.DataTemplates>
 
-    <Application.Styles>
-        <FluentTheme />
-    </Application.Styles>
+	<Application.Styles>
+		<FluentTheme>
+			<FluentTheme.Palettes>
+				<ColorPaletteResources x:Key="Dark" RegionColor="#1c1c1c"/>
+			</FluentTheme.Palettes>
+		</FluentTheme>
+	</Application.Styles>
 </Application>
