--- a/app/SocialNewsApp/Views/PostControl.axaml
+++ b/app/SocialNewsApp/Views/PostControl.axaml
@@ -9,7 +9,7 @@
 	<Design.DataContext>
 		<m:Post/>
 	</Design.DataContext>
-	<Grid>
+	<Grid Cursor="Hand" PointerReleased="Grid_PointerReleased">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="auto"/>
 			<RowDefinition/>
@@ -17,7 +17,7 @@
 		<StackPanel Orientation="Horizontal" Spacing="5">
 			<Button Content="{Binding Votes, StringFormat=⬆ {0}}" VerticalAlignment="Center" IsVisible="{Binding Voted}" Opacity=".5"/>
 			<Button Content="{Binding Votes, StringFormat=⬆ {0}}" VerticalAlignment="Center" IsVisible="{Binding !Voted}"/>
-			<TextBlock Text="{Binding Category}" VerticalAlignment="Center" />
+			<TextBlock Text="{Binding Category}" VerticalAlignment="Center"/>
 			<TextBlock Text="{Binding CreatedAt}" VerticalAlignment="Center"/>
 			<TextBlock Text="{Binding User.Name, StringFormat=by {0}}" VerticalAlignment="Center"/>
 		</StackPanel>
