--- a/app/SocialNewsApp/Views/PostDetailsControl.axaml
+++ b/app/SocialNewsApp/Views/PostDetailsControl.axaml
@@ -13,7 +13,7 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="auto"/>
 			<RowDefinition Height="auto"/>
-			<RowDefinition/>
+			<RowDefinition Height="auto"/>
 			<RowDefinition/>
 		</Grid.RowDefinitions>
 		<Button Command="{Binding CancelCommand}">Back</Button>
