--- a/web/public/style.css
+++ b/web/public/style.css
@@ -15,6 +15,9 @@ a:has(button) {
   color: currentColor;
   text-decoration: none;
 }
+main a > button {
+  width: 100%;
+}
 h1 > a {
   vertical-align: sub;
 }
