--- a/web/views/newPost.ejs
+++ b/web/views/newPost.ejs
@@ -1,4 +1,5 @@
-<% pageName = "New post" %> <%- include("head") -%>
+<% pageName = "New post" %>
+<%- include("head") -%>
 <form method="post">
   <h2>New post</h2>
   <p>
@@ -15,12 +16,8 @@
   </label>
   <label>
     Link type
+    <%- include("linkTypes") -%>
     <input type="text" name="linkType" value="<%= linkType %>" list="linkTypes">
-    <datalist id="linkTypes">
-      <option>website</option>
-      <option>pdf</option>
-      <option>video</option>
-    </datalist>
   </label>
   <label>
     Text
