--- a/web/views/comment.ejs
+++ b/web/views/comment.ejs
@@ -2,10 +2,7 @@
   <div>
     <form action="/commentVote/<%= comment.id %>" method="post">
       <button class="<%= comment.voted ? 'outline' : '' %>">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" aria-label="upvote arrow">
-          <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M12 8l-7 7M12 8l7 7" />
-        </svg>
+        <%- include("upvoteArrow") -%>
         <%= comment.votes %>
       </button>
     </form>
@@ -25,7 +22,7 @@
     <% if (user) { %>
     <a href="/comments/<%= comment.id %>"><button>Reply</button></a>
     <% } %>
-    <span><%= comment.createdAt.toISOString() %></span>
+    <span><%= dateFormat(comment.createdAt) %></span>
     <span>
       by
       <a href="/users/<%= comment.UserId %>"><%= comment.User.name %></a>
