--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -3,15 +3,12 @@
   <div>
     <form action="/postVote/<%= post.id %>?redirect=/#p<%= post.id %>" method="post">
       <button class="<%= post.voted ? 'outline' : '' %>">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" aria-label="upvote arrow">
-          <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M12 8l-7 7M12 8l7 7" />
-        </svg>
+        <%- include("upvoteArrow") -%>
         <%= post.votes %>
       </button>
     </form>
     <button class="contrast"><%= post.category %></button>
-    <span><%= post.createdAt.toISOString() %></span>
+    <span><%= dateFormat(post.createdAt) %></span>
     <span>
       by
       <a href="/users/<%= post.UserId %>"><%= post.User.name %></a>
