--- a/web/views/commentPage.ejs
+++ b/web/views/commentPage.ejs
@@ -3,20 +3,14 @@
   <div>
     <form action="/commentVote/<%= comment.id %>?redirect=/comments/<%= comment.id %>" method="post">
       <button class="<%= comment.voted ? 'outline' : '' %>">
-        <%- include("upvoteArrow") -%>
+        <%- include("icons/upvoteArrow") -%>
         <%= comment.votes %>
       </button>
     </form>
     <% if (user.isAdmin || user.id == comment.UserId) { %>
     <form action="/deletecomment/<%= comment.id %>" method="post">
       <button type="submit">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" aria-label="trash">
-          <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-            <path d="M12 20h5c0.5 0 1 -0.5 1 -1v-14M12 20h-5c-0.5 0 -1 -0.5 -1 -1v-14" />
-            <path d="M4 5h16" />
-            <path d="M10 4h4M10 9v7M14 9v7" />
-          </g>
-        </svg>
+        <%- include("icons/trash") -%>
       </button>
     </form>
     <% } %>
